# genrisk

./: .gitignore  README.md  full_pipline.ipynb  gas_supply.csv  mkdocs.yml  pyproject.toml  todo.md
.github/workflows/: python-app.yml
docs/: .gitignore
docs/examples/: comparing_worst_case_risk.ipynb  data_generation.ipynb  full_pipline.ipynb  worst_case_risk.ipynb  worst_case_risk_generation.ipynb
docs/ref/: generation.md  shift.md
forcasting_models/: lstm.pkl  lstm.pkl.ckpt  tft.pkl  tft.pkl.ckpt
forecasting/: forcasting.py
forecasting/utils/: data.py  utils.py
generation_models/: gen.pth
genrisk/: shift.py  unet_diffusion.py
genrisk/forecasting/: arima.py  base.py  forcasting.py  lstm.py  tft.py
genrisk/generation/: __init__.py  base.py  conv2d_gan.py  diffusion.py  gan.py  lstm.py  lstm_gan.py  lstm_vae.py  tcn.py  tcn_gan.py  tcn_vae.py  transformer_blocks.py  transformer_gan.py  transformer_vae.py  utils.py  vae.py  vector_ar.py
genrisk/tests/: test_forecasting.py  test_shift.py
genrisk/utils/: create_immutable_features.py  data_processor.py  evaluation.py  gen_evaluation.py  plot.py
lightning_logs/version_0/: metrics.csv
lightning_logs/version_1/: metrics.csv
lightning_logs/version_10/: metrics.csv
lightning_logs/version_11/: metrics.csv
lightning_logs/version_12/: metrics.csv
lightning_logs/version_13/: metrics.csv
lightning_logs/version_14/: metrics.csv
lightning_logs/version_15/: metrics.csv
lightning_logs/version_2/: metrics.csv
tests/: test_generation.py  test_shift.py
tresh/: Arima.py  dataset.py  worst_plot.py
(+23 files in other folders)
