[tool.poetry]
name = "genrisk"
version = "1.0.0"
description = "Risk under synthetic shift in time series data"
authors = ["Vitaliy Pozdnyakov <pozdnyakov@airi.net>"]
license = "MIT licence"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1"
pandas = "^1"
scikit-learn = "^1"
tqdm = "^4"
statsmodels = "^0"
pytorch-lightning = "^2"
torch = "^2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mkdocs = "^1.3.1"
mknotebooks = "^0.8.0"
markdown-include = "^0.7.0"
python-markdown-math = "^0.8"
mkdocs-material = "^8.4.0"
mkdocstrings = "^0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
